# IntraTalkerpy

./: .gitignore  LICENSE  MANIFEST.in  README.md  example_run.ipynb  pyproject.toml
.github/workflows/: python_compatibility.yml  release.yaml
docs/: api.rst  conf.py  perturbation_api.rst  support.rst  tf_api.rst
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  install.doctree  support.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  api.html  genindex.html  index.html  install.html  objects.inv  perturbation_api.html  py-modindex.html  search.html  searchindex.js  support.html  tf_api.html
docs/_build/html/.doctrees/: api.doctree  environment.pickle  index.doctree  install.doctree  perturbation_api.doctree  support.doctree  tf_api.doctree
docs/_build/html/_sources/: index.rst.txt  install.rst.txt  support.rst.txt  tf_api.rst.txt
docs/_static/: custom.css
script_test/: CrossTalkeR_input_PMF_MF2.csv  CrossTalkeR_input_PMF_MF2_cluster.csv  CrossTalkeR_input_control.csv  CrossTalkeR_input_control_cluster.csv
script_test/TF_results/PMF_MF2/: PMF_MF2_specific_markers_t_test.csv  significant_cluster_tf_results_PMF_MF2.csv  unfiltered_tf_scores_PMF_MF2.csv  variable_tf_scores_PMF_MF2.csv
script_test/TF_results/compared/: all_tfs_PMF_MF2_vs_control.csv
script_test/TF_results/control/: control_specific_markers_t_test.csv  significant_cluster_tf_results_control.csv  unfiltered_tf_scores_control.csv  variable_tf_scores_control.csv
src/intratalkerpy/: __init__.py
src/intratalkerpy/mt/: __init__.py  _differential_pseudotime_analysis.py  _project_perturbation_in_embedding.py  _simulation_of_perturbation.py
src/intratalkerpy/perturbation/: __init__.py
src/intratalkerpy/perturbation/mt/: __init__.py  _train_ridge_regression.py  (+2 more)
src/intratalkerpy/pl/: __init__.py  _barplot_scores.py  _heatmap_scores.py  _pseudo_diff.py  _rank_receptors_by_coefs.py  _vectorfield.py
src/intratalkerpy/tf/: IntraTalker_analysis.py  __init__.py  generate_intracellular_network.py  get_condition_significant.py  get_significant_TFs.py  plot.py  tfobject.py  utils.py
src/intratalkerpy/ut/: __init__.py  _calculate_grid_arrows.py
src/ut/: _calculate_rankings.py  _compute_differential_pseudotime.py  _compute_pseudotime_gradient.py
tests/: test_package_smoke.py
(+7 files in other folders)
