[project]
name = "intratalkerpy"
version = "0.1.0"
description = "A Python package for receptor analysis and visualization in single-cell data"
authors = [
    {name = "Vanessa Kloeker", email = "vanessa.kloeker@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "scanpy>=1.8.0",
    "anndata>=0.8.0",
]

[project.optional-dependencies]
velocyto = [
    "cython>=0.29.0",
    "velocyto>=0.17.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[tool.poetry]
packages = [{include = "intratalkerpy", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
