[project]
name = "intratalkerpy"
version = "0.3.0"
description = "A Python package for transcription factor and perturbation analysis in single-cell data"
authors = [
    {name = "Vanessa Kloeker", email = "vanessa.kloeker@gmail.com"},
    {name = "Larissa Hermanns", email = "larissa.hermanns@rwth-aachen.de"}
    
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy (>=1.26.0)",
    "anndata (>=0.11.4,<0.12.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "decoupler (>=1.8.0,<3.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "scanpy (>=1.11.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.8.0)",
    "scipy (>=1.11.0)",
    "scikit-learn (>=1.3.0)",
    "adjustText (>=1.0.0)",
    "deltacorrpy @ git+https://github.com/vckraemer/deltacorrpy.git"
]

[project.optional-dependencies]
velocyto = [
    "cython>=0.29.0",
    "velocyto>=0.17.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]
docs = [
    "sphinx>=9.0",
    "furo>=2025.7.19",
]

[tool.poetry]
packages = [{include = "intratalkerpy", from = "src"}]
include = [
    "src/intratalkerpy/tf/data/*.csv",
    "src/intratalkerpy/tf/data/*.h5ad"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
